--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1769,6 +1769,14 @@ input, select, textarea {
 			margin: 0 2em 2em 0;
 		}
 
+		.image.left2 {
+			float: left;
+			margin: 0 5em 2em 0;
+			width: 40%;
+			height: 40%;
+			
+		}
+
 		.image.centered {
 			display: block;
 			margin: 0 0 2em 0;
